--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -18,8 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="DataFlair NOTES"
-            android:textColor="@color/white"
+            android:text="Secure Notes"
             android:textSize="28sp"
             android:textStyle="bold" />
 
@@ -30,8 +29,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:src="@drawable/ic_baseline_delete_24"
-            app:tint="@color/white" />
+            android:src="@drawable/ic_baseline_delete_24" />
 
     </RelativeLayout>
 
@@ -53,9 +51,6 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_baseline_add_24"
-        app:tint="@color/white"
         tools:ignore="SpeakableTextPresentCheck" />
-
-
 
 </RelativeLayout>
