--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp"
     android:layout_marginBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools">
@@ -10,7 +10,8 @@
         android:id="@+id/titleOutput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="26sp"
+        android:textStyle="bold"
         tools:text="Title" />
 
     <TextView
